--- a/public/css/style.css
+++ b/public/css/style.css
@@ -311,6 +311,10 @@ body {
   color: #333;
 }
 
+#home-page {
+  font-family: "Lato", sans-serif;
+}
+
 header {
   height: 50px;
 }
@@ -460,11 +464,14 @@ header .header-menu-nav a {
   top: 14px;
 }
 
-.lists .lists-lists li .icon-project-edit {
+.lists .lists-lists li .icon-project {
   display: none;
+}
+
+.lists .lists-lists li .icon-project-edit {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 30px;
   background-color: transparent !important;
 }
 
@@ -476,12 +483,28 @@ header .header-menu-nav a {
   display: none;
 }
 
-.lists .lists-lists li .project-show:hover + .icon-project-edit {
-  display: block !important;
+.lists .lists-lists li .icon-project-delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: transparent !important;
 }
 
-.lists .lists-lists li .icon-project-edit:hover {
+.lists .lists-lists li .icon-project-delete img {
+  position: static;
+}
+
+.lists .lists-lists li .icon-project-delete span {
+  display: none;
+}
+
+.lists .lists-lists li .icon-project-edit img, .lists .lists-lists li .icon-project-delete img {
+  width: 13px;
+}
+
+.lists .lists-lists li .icon-project-edit:hover, .lists .lists-lists li .icon-project-delete:hover {
   display: block;
+  border: none;
 }
 
 .lists .lists-lists li .icon-project-click {
@@ -491,9 +514,8 @@ header .header-menu-nav a {
 .lists .lists-lists li .project-change-name {
   border: 1px solid #e6e6e6;
   font-size: 16px;
-  margin-left: 45px;
   padding: 15px;
-  width: 76%;
+  width: 65%;
 }
 
 .lists .lists-lists .lists-add a {
@@ -949,47 +971,65 @@ header .header-menu-nav a {
   background-color: white;
 }
 
-#home-page header {
+#home-page .header-home {
   background-color: transparent;
-  padding: 15px;
-  height: 20px;
+  height: 50px;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
 }
 
-#home-page header nav {
+#home-page .header-home nav {
   display: block;
   margin: auto;
-  width: 80%;
 }
 
-#home-page header .header-home-menu-logo {
+#home-page .header-home .header-home-menu-logo {
   float: left;
 }
 
-#home-page header .header-home-menu-logo a {
+#home-page .header-home .header-home-menu-logo h1 {
+  padding: 15px 0;
+}
+
+#home-page .header-home .header-home-menu-logo h1 a {
+  padding: 15px;
+  font-family: "Lato", sans-serif;
   color: white;
   text-decoration: none;
 }
 
-#home-page header .header-home-menu-logo a:hover {
+#home-page .header-home .header-home-menu-logo h1 a span {
+  font-weight: bold;
+}
+
+#home-page .header-home .header-home-menu-logo a:hover {
   color: #f5f5f5;
 }
 
-#home-page header .header-home-menu-nav {
+#home-page .header-home .header-home-menu-nav {
   float: right;
 }
 
-#home-page header .header-home-menu-nav li {
+#home-page .header-home .header-home-menu-nav ul {
+  padding: 15px;
+}
+
+#home-page .header-home .header-home-menu-nav ul li {
   float: left;
   margin-left: 25px;
 }
 
-#home-page header .header-home-menu-nav li a {
+#home-page .header-home .header-home-menu-nav ul li a {
+  font-family: "Lato", sans-serif;
   color: white;
   text-decoration: none;
+  transition: 0.3s;
+}
+
+#home-page .header-home .header-home-menu-nav ul li a:hover {
+  text-decoration: underline;
 }
 
 .home-b {
@@ -1028,11 +1068,14 @@ header .header-menu-nav a {
 .home-banner-bg h2 {
   color: white;
   font-size: 45px;
-  font-weight: bold;
   margin-bottom: 15px;
   position: absolute;
   top: 45%;
-  left: 40%;
+  left: 42%;
+}
+
+.home-banner-bg h2 span {
+  font-weight: bold;
 }
 
 .home-banner::after {
