--- a/public/scss/_list.scss
+++ b/public/scss/_list.scss
@@ -68,8 +68,22 @@
         position: absolute;
         top: 14px;
       }
-      .icon-project-edit{
+      .icon-project{
         display: none;
+      }
+      .icon-project-edit{
+        position: absolute;
+        top: 0;
+        right: 30px;
+        background-color: transparent !important;
+        img{
+          position: static;
+        }
+        span{
+          display: none;
+        }
+      }
+      .icon-project-delete{
         position: absolute;
         top: 0;
         right: 0;
@@ -81,11 +95,12 @@
           display: none;
         }
       }
-      .project-show:hover + .icon-project-edit{
-        display: block !important;
+      .icon-project-edit img, .icon-project-delete img{
+        width: 13px;
       }
-      .icon-project-edit:hover{
+      .icon-project-edit:hover, .icon-project-delete:hover{
         display: block;
+        border: none;
       }
       .icon-project-click{
         left: 15px;
@@ -93,9 +108,8 @@
       .project-change-name {
           border: 1px solid $color-border;
           font-size: 16px;
-          margin-left: 45px;
           padding: 15px;
-          width: 76%;
+          width: 65%;
       }
     }
     .lists-add{
