--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1106,6 +1106,30 @@ header .header-menu-nav a {
   font-size: 1.2em;
 }
 
+.home-a .home-about .home-about-create {
+  display: block;
+  margin: auto;
+  width: 20%;
+  margin-top: 40px;
+}
+
+.home-a .home-about .home-about-create a {
+  background-color: white;
+  border-radius: 3px;
+  color: #1a8c8e;
+  display: block;
+  font-size: 1.1em;
+  padding: 15px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.home-a .home-about .home-about-create a:hover {
+  background-color: #e6e6e6;
+}
+
 .home-f .home-features-div {
   padding: 50px 0;
 }
