--- a/public/scss/_list.scss
+++ b/public/scss/_list.scss
@@ -105,7 +105,7 @@
       .icon-project-click{
         left: 15px;
       }
-      .project-change-name {
+      .project-change-name, .tag-change-name {
           border: 1px solid $color-border;
           font-size: 16px;
           padding: 15px;
