--- a/public/scss/_home.scss
+++ b/public/scss/_home.scss
@@ -100,6 +100,9 @@
   background: -webkit-linear-gradient(to left, #136a8a , #267871); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #136a8a , #267871); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   .home-about{
+    h2{
+      display: none;
+    }
     padding: 25px 0;
     p{
       width: 45%;
@@ -163,9 +166,6 @@
       .home-features-div-img{
         display: inline-block;
         width: 50%;
-        img{
-          float: right;
-        }
       }
       .home-features-div-div, .home-features-div-img{
         vertical-align: middle;
@@ -175,7 +175,12 @@
 }
 .home-features-etiquettes{
     img{
-      float: left !important;
+      float: left;
+    }
+}
+.home-features-projects, .home-features-responsive{
+    img{
+      float: right;
     }
 }
 .home-features-etiquettes{
