responsive Auth page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1399,6 +1399,13 @@ footer a:hover {
   }
 }
 
+@media screen and (max-width: 733px) {
+  /* Register page*/
+  #auth-page .auth .auth-form-register, #auth-page .auth .auth-features {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 695px) {
   /* Home page*/
   .home-a .home-about p {
@@ -1476,5 +1483,9 @@ footer a:hover {
   }
   .home-a .home-about .home-about-create a {
     font-size: 0.9em;
+  }
+  /* Login Page */
+  #auth-page .auth .auth-auth .auth-form, #auth-page .auth .auth-auth .auth-form-register {
+    width: 285px;
   }
 }
