--- a/public/css/style.css
+++ b/public/css/style.css
@@ -352,6 +352,13 @@ header .header-menu-nav ul li a {
   text-decoration: none;
 }
 
+header .header-menu-nav ul li a img {
+  position: absolute;
+  right: 85px;
+  display: none;
+  top: 16px;
+}
+
 header .header-menu-nav ul li a:hover ~ .auth-options {
   display: block;
 }
@@ -380,8 +387,15 @@ header .header-menu-nav a {
 }
 
 .lists {
-  float: left;
-  width: 20%;
+  width: 350px;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  bottom: 0;
+}
+
+.lists .auth-responsive {
+  display: none;
 }
 
 .lists .lists-scroll form {
@@ -402,7 +416,7 @@ header .header-menu-nav a {
   float: lf;
   font-weight: bold;
   padding: 17px 13px;
-  width: 78px;
+  width: 90px;
   cursor: pointer;
 }
 
@@ -528,12 +542,11 @@ header .header-menu-nav a {
 }
 
 .tasks {
-  display: inline-block;
-  width: 79.7%;
   background-color: white;
   height: 100%;
   border-left: 1px solid #e6e6e6;
   vertical-align: top;
+  margin-left: 350px;
 }
 
 .tasks .tasks-tasks {
@@ -710,10 +723,6 @@ header .header-menu-nav a {
 
 .tasks .tasks-tasks .tasks-done-title {
   margin-top: 15px;
-}
-
-.tasks .tasks-tasks .checked-task-group {
-  display: none;
 }
 
 .tasks .tasks-tasks ol {
@@ -1329,6 +1338,20 @@ footer a:hover {
   font-family: "Indie Flower", cursive;
 }
 
+@media screen and (max-width: 1466px) {
+  /* Dashboard*/
+  .tasks .tasks-tasks .task-add .task-form-project {
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 1466px) {
+  /* Dashboard*/
+  .tasks .tasks-tasks .task-add .task-form-project {
+    width: 84%;
+  }
+}
+
 @media screen and (max-width: 1280px) {
   /* Home page*/
   .home-a .home-about p {
@@ -1336,6 +1359,23 @@ footer a:hover {
   }
   .home-a .home-about .home-about-create {
     width: 30%;
+  }
+}
+
+@media screen and (max-width: 1160px) {
+  /* Dashboard*/
+  .tasks .tasks-tasks .task-add .task-add-form, .tasks .tasks-tasks .task-add .task-edit-form, .tasks .tasks-tasks .task-add .task-edit-form-date {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1140px) {
+  /* Dashboard*/
+  .tasks .tasks-tasks .task-add .task-form-project {
+    width: 81%;
+  }
+  .tasks .tasks-tasks .task-add .task-add-submit {
+    width: 13%;
   }
 }
 
@@ -1363,6 +1403,13 @@ footer a:hover {
   }
   .home-f .home-features-div .home-features-width .home-features-div-img {
     width: 60% !important;
+  }
+  /* Dashboard */
+  .tasks .tasks-tasks .task-add .task-form-project {
+    width: 93%;
+  }
+  .tasks .tasks-tasks .task-add .task-add-submit {
+    width: 95px;
   }
 }
 
@@ -1396,6 +1443,24 @@ footer a:hover {
   }
   .home-f .home-features-div .home-features-width .home-features-div-img img {
     width: 60%;
+  }
+  /* Dashboard */
+  .lists {
+    left: -350px;
+    background-color: #f5f5f5;
+    border-right: 1px solid #e6e6e6;
+  }
+  .lists .auth-responsive {
+    display: block;
+  }
+  .tasks {
+    margin-left: 0;
+  }
+  .header .header-menu-nav ul li a img {
+    display: block;
+  }
+  .header .header-menu-nav ul li .auth-options {
+    display: none !important;
   }
 }
 
