--- a/public/scss/_menu.scss
+++ b/public/scss/_menu.scss
@@ -26,6 +26,12 @@ header{
           display: block;
           padding: 17px 20px 15px 93px;
           text-decoration: none;
+          img{
+            position: absolute;
+            right: 85px;
+            display: none;
+            top: 16px;
+          }
         }
         a:hover ~ .auth-options{
           display: block;
