--- a/public/scss/_responsive.scss
+++ b/public/scss/_responsive.scss
@@ -1,3 +1,15 @@
+@media screen and (max-width: 1466px) {
+  /* Dashboard*/
+  .tasks .tasks-tasks .task-add .task-form-project {
+      width: 85%;
+  }
+}
+@media screen and (max-width: 1466px) {
+  /* Dashboard*/
+  .tasks .tasks-tasks .task-add .task-form-project {
+      width: 84%;
+  }
+}
 @media screen and (max-width: 1280px) {
   /* Home page*/
   .home-a{
@@ -9,6 +21,22 @@
         width: 30%;
       }
     }
+  }
+}
+@media screen and (max-width: 1160px) {
+  /* Dashboard*/
+
+  .tasks .tasks-tasks .task-add .task-add-form, .tasks .tasks-tasks .task-add .task-edit-form, .tasks .tasks-tasks .task-add .task-edit-form-date {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 1140px) {
+  /* Dashboard*/
+  .tasks .tasks-tasks .task-add .task-form-project {
+      width: 81%;
+  }
+  .tasks .tasks-tasks .task-add .task-add-submit {
+      width: 13%;
   }
 }
 @media screen and (max-width: 1100px) {
@@ -48,6 +76,13 @@
         }
       }
     }
+  }
+  /* Dashboard */
+  .tasks .tasks-tasks .task-add .task-form-project {
+    width: 93%;
+  }
+  .tasks .tasks-tasks .task-add .task-add-submit {
+    width: 95px;
   }
 }
 @media screen and (max-width: 900px) {
@@ -89,6 +124,34 @@
           width: 50% !important;
           img{
             width: 60%;
+          }
+        }
+      }
+    }
+  }
+  /* Dashboard */
+  .lists {
+    left: -350px;
+    background-color: $color-white-break;
+    border-right: 1px solid $color-border;
+    .auth-responsive{
+      display: block;
+    }
+  }
+  .tasks {
+    margin-left: 0;
+  }
+  .header{
+    .header-menu-nav{
+      ul{
+        li{
+          a{
+            img{
+              display: block;
+            }
+          }
+          .auth-options{
+            display: none !important;
           }
         }
       }
