--- a/public/scss/_home.scss
+++ b/public/scss/_home.scss
@@ -78,15 +78,19 @@
   position: absolute;
   top: 0;
   width: 100%;
-  h2{
-    color: white;
-    font-size: 45px;
-    margin-bottom: 15px;
-    position: absolute;
-    top: 45%;
-    left: 42%;
-    span{
-      font-weight: bold;
+  .home-banner-title {
+    display: block;
+    margin: auto;
+    width: 14%;
+    h2{
+      color: white;
+      font-size: 45px;
+      margin-top: 50%;
+      position: absolute;
+      top: -100%;      
+      span{
+        font-weight: bold;
+      }
     }
   }
 }
